--- a/Assets/css/freelancer.css
+++ b/Assets/css/freelancer.css
@@ -10,6 +10,8 @@ body {
 p {
   font-size: 20px;
   text-align: justify;
+  padding-right: 15px;
+  padding-left: 15px;
 }
 p.small {
   font-size: 16px;
